--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -r tmp ",
     "tscWatch": "tsc -w",
     "watchify": "watchify tmp/compiled/main.js -o app/scripts/main.js",
-    "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app",
+    "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
     "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html"
