--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A Container Component for Acrolinx Integrations that loads the Acrolinx sidebar",
   "scripts": {
     "install": "mkdir app/scripts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -r tmp ",
+    "test": "mocha tmp/compiled/test/**/*.js",
+    "clean": "rm -rf tmp; rm -rf app/scripts",
     "tscWatch": "tsc -w",
-    "watchify": "watchify tmp/compiled/main.js -o app/scripts/main.js",
+    "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
@@ -16,9 +16,13 @@
   "author": "Acrolinx",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/mocha": "^2.2.39",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
+    "chai": "^3.5.0",
     "hashcat": "^0.3.1",
+    "mocha": "^3.2.0",
     "tslint": "^4.4.2",
     "typescript": "^2.2.1",
     "watchify": "^3.9.0"
