--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "clean": "rm -rf tmp; rm -rf app/scripts",
     "tscWatch": "tsc -w",
     "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
+    "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
-    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html"
+    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html"
   },
   "author": "Acrolinx",
   "license": "ISC",
