--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
-    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run fakeSidebarDist",
+    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildInlined && npm run fakeSidebarDist",
+    "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
+    "inline": "inliner tmp/dist-inlined/index-inlined.html >tmp/dist-inlined.html",
+    "packInlined": "node ./tools/pack-inlined.js >tmp/acrolinx-server-selector-inlined.js",
     "fakeSidebarDist": "npm run bower && cat bower_components/jquery/dist/jquery.min.js bower_components/lodash/dist/lodash.min.js > tmp/dist/scripts/libs.js && cp tmp/dist/scripts/main.js tmp/dist/scripts/sidebar.js"
   },
   "author": "Acrolinx",
@@ -28,6 +31,7 @@
     "browserify": "^14.1.0",
     "chai": "^3.5.0",
     "hashcat": "^0.3.1",
+    "inliner": "^1.10.2",
     "mocha": "^3.2.0",
     "tslint": "^4.4.2",
     "typescript": "^2.2.1",
