DEV-11425: Server Selector must turn on withCredentials in case it connects to a google server. Added proxy script to ease local testing.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "chai": "^3.5.0",
+    "cookie": "^0.3.1",
     "hashcat": "^0.3.1",
     "inliner": "1.10.2",
     "mocha": "^3.2.0",
