Display version and build number while loading in the console and in the sidebar about page.

--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "install": "mkdir app/scripts",
     "test": "mocha tmp/compiled/test/**/*.js",
     "clean": "rm -rf tmp; rm -rf app/scripts",
+    "tsc": "tsc",
     "tscWatch": "tsc -w",
     "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
-    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildInlined && npm run fakeSidebarDist",
+    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildInlined && npm run fakeSidebarDist",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
     "inline": "cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
     "packInlined": "node ./tools/pack-inlined.js >tmp/acrolinx-server-selector-inlined.js",
+    "injectVersion": "node ./tools/inject-version.js",
     "fakeSidebarDist": "npm run bower && cat bower_components/jquery/dist/jquery.min.js bower_components/lodash/dist/lodash.min.js > tmp/dist/scripts/libs.js && cp tmp/dist/scripts/main.js tmp/dist/scripts/sidebar.js"
   },
   "author": "Acrolinx",
