Create an offline dist e.g. for the java sdk

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
-    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildInlined && npm run fakeSidebarDist",
+    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist",
+    "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
-    "inline": "npm run inlineSvg && cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
+    "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
     "inlineSvg": "node ./tools/inline-svg.js",
     "packInlined": "node ./tools/pack-inlined.js >tmp/acrolinx-server-selector-inlined.js",
     "injectVersion": "node ./tools/inject-version.js",
