--- a/package.json
+++ b/package.json
@@ -7,16 +7,12 @@
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "install": "mkdir -p app/scripts",
-    "test": "mocha tmp/compiled/test/**/*.js",
-    "clean": "rm -rf tmp; rm -rf app/scripts",
-    "tsc": "tsc",
-    "tscWatch": "tsc -w",
-    "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
+    "test": "mocha tmp/compiled/test/**/* c/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
-    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist",
+    "buildDist": "rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
     "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
@@ -26,7 +22,9 @@
     "fakeSidebarDist": "npm run bower && cat bower_components/jquery/dist/jquery.min.js bower_components/lodash/dist/lodash.min.js > tmp/dist/scripts/libs.js && cp tmp/dist/scripts/main.js tmp/dist/scripts/sidebar.js"
   },
   "author": "Acrolinx",
-  "license": "ISC",
+  "url": "http://www.acrolinx.com",
+  "license": "Apache-2.0",
+  "files": ["dist"],
   "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
