DEV-12258 Fixed falsely deleted lines...

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "install": "mkdir -p app/scripts",
-    "test": "mocha tmp/compiled/test/**/* c/main.js -o app/scripts/main.js",
+    "test": "mocha tmp/compiled/test/**/*.js",
+    "clean": "rm -rf tmp; rm -rf app/scripts",
+    "tsc": "tsc",
+    "tscWatch": "tsc -w",
+    "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
