--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "A Container Component for Acrolinx Integrations that loads the Acrolinx sidebar",
   "scripts": {
     "bower": "bower install",
-    "compileLocalization": "mkdir -p tmp/generated && node ./tools/compile-localization.js",
+    "generateTranslationsTs": "mkdir -p tmp/generated && node ./tools/generate-translations-ts.js",
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "install": "mkdir -p app/scripts",
     "test": "mocha tmp/compiled/test/**/*.js",
     "clean": "rm -rf tmp; rm -rf app/scripts",
-    "tsc": "npm run compileLocalization && tsc",
-    "tscWatch": "npm run compileLocalization && tsc -w",
+    "tsc": "npm run generateTranslationsTs && tsc",
+    "tscWatch": "npm run generateTranslationsTs && tsc -w",
     "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint src/**/*",
     "tslintFix": "tslint --fix src/**/*",
-    "buildDist": "npm run compileLocalization && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
     "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
