--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "author": "Acrolinx",
   "url": "http://www.acrolinx.com",
   "license": "Apache-2.0",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
@@ -42,6 +44,7 @@
     "inliner": "1.10.2",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "ts-node": "3.0.2",
     "tslint": "^4.4.2",
     "typescript": "2.3.4",
     "watchify": "^3.9.0"
