--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
-    "tslint": "tslint src/**/*",
-    "tslintFix": "tslint --fix src/**/*",
+    "tslint": "tslint 'src/**/*.ts'",
+    "tslintFix": "tslint --fix 'src/**/*.ts'",
     "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
