--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "scripts": {
     "bower": "bower install",
     "generateTranslationsTs": "mkdir -p tmp/generated && node ./tools/generate-translations-ts.js",
+    "dev": "concurrently --kill-others -r 'npm run lessWatch' 'npm run tscWatch' 'npm run watchify' 'npm run browsersync'",
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
-    "install": "mkdir -p app/scripts",
+    "install": "mkdir -p app/scripts && npm run less",
     "test": "mocha tmp/compiled/test/**/*.js",
     "clean": "rm -rf tmp; rm -rf app/scripts",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
+    "less": "lessc src/styles/index.less >app/styles/index.css",
+    "lessWatch": "watch 'npm run less' src/styles",
     "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint 'src/**/*.ts'",
     "tslintFix": "tslint --fix 'src/**/*.ts'",
-    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
     "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
@@ -39,14 +42,17 @@
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "chai": "^3.5.0",
+    "concurrently": "3.4.0",
     "cookie": "^0.3.1",
     "hashcat": "^0.3.1",
     "inliner": "1.10.2",
+    "less": "2.7.2",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "ts-node": "3.0.2",
     "tslint": "^4.4.2",
     "typescript": "2.3.4",
+    "watch": "1.0.2",
     "watchify": "^3.9.0"
   },
   "dependencies": {}
