--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint 'src/**/*.ts'",
     "tslintFix": "tslint --fix 'src/**/*.ts'",
-    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run prepack && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "prepack": "prepack app/scripts/main.js --out app/scripts/main.js",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
     "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index-inlined.html |inliner >../dist-inlined.html",
@@ -49,11 +50,14 @@
     "less": "2.7.2",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "prepack": "0.2.4",
     "ts-node": "3.0.2",
     "tslint": "^4.4.2",
-    "typescript": "2.4.0",
+    "typescript": "2.3.4",
     "watch": "1.0.2",
     "watchify": "^3.9.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "preact": "8.1.0"
+  }
 }
