--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
     "tslint": "tslint 'src/**/*.ts'",
     "tslintFix": "tslint --fix 'src/**/*.ts'",
-    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run prepack && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
     "prepack": "prepack app/scripts/main.js --out app/scripts/main.js",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
