--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "install": "mkdir -p app/scripts && npm run less",
-    "test": "mocha tmp/compiled/test/**/*.js",
+    "test": "npm run testNodeJS && npm run testKarmaPhantomJS",
+    "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
+    "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js",
     "clean": "rm -rf tmp; rm -rf app/scripts",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
@@ -17,10 +19,12 @@
     "lessWatch": "watch 'npm run less' src/styles",
     "watchify": "watchify tmp/compiled/src/main.js -o app/scripts/main.js",
     "browserify": "browserify tmp/compiled/src/main.js -o app/scripts/main.js",
-    "browsersync": "browser-sync start --server --files \"app/**/*\" --startPath app --cors",
-    "tslint": "tslint 'src/**/*.ts'",
-    "tslintFix": "tslint --fix 'src/**/*.ts'",
-    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "watchifyTest": "watchify tmp/compiled/test/browser-tests/src/index.js -o tmp/browser-tests-index.js",
+    "browserifyTest": "browserify tmp/compiled/test/browser-tests/src/index.js -o tmp/browser-tests-index.js",
+    "browsersync": "browser-sync start --server --files \"app/**/*\" --files \"tmp/browser-tests-index.js\" --startPath app --cors",
+    "tslint": "tslint 'src/**/*.ts' 'test/**/*.ts'",
+    "tslintFix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts'",
+    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
     "prepack": "prepack app/scripts/main.js --out app/scripts/main.js",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
@@ -42,11 +46,18 @@
     "bower": "^1.8.0",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
+    "browserify-istanbul": "^2.0.0",
     "chai": "^3.5.0",
     "concurrently": "3.4.0",
     "cookie": "^0.3.1",
     "hashcat": "^0.3.1",
     "inliner": "1.10.2",
+    "karma": "^1.7.0",
+    "karma-browserify": "^5.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "less": "2.7.2",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
