First test which shows server selector form

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/chai": "3.4.35",
     "@types/jquery": "2.0.47",
     "@types/mocha": "2.2.39",
+    "@types/sinon": "2.3.2",
     "bower": "^1.8.0",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
@@ -64,6 +65,7 @@
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "prepack": "0.2.4",
+    "sinon": "2.3.6",
     "ts-node": "3.0.2",
     "tslint": "^4.4.2",
     "typescript": "2.3.4",
