--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "noUnusedLocals": true,
     "outDir": "tmp/compiled",
     "sourceMap": true,
-    "module": "commonjs"
+    "module": "commonjs",
+    "lib": ["ES5","DOM", "ES2015.Collection"] /* ES2015.Collection is just needed to make sinon happy */
   },
   "exclude": [
     "node_modules",
