Prepare first npm release

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "concurrently --kill-others -r 'npm run lessWatch' 'npm run tscWatch' 'npm run watchify' 'npm run browsersync'",
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
-    "install": "mkdir -p app/scripts && npm run less",
+    "prepareDev": "mkdir -p app/scripts && npm run less",
     "test": "npm run testNodeJS && npm run testKarmaPhantomJS",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
     "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js",
-    "clean": "rm -rf tmp; rm -rf app/scripts",
+    "clean": "rm -rf tmp && rm -rf app/scripts && rm -rf dist",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
     "less": "lessc src/styles/index.less >app/styles/index.css",
@@ -24,7 +24,7 @@
     "browsersync": "browser-sync start --server --files \"app/**/*\" --files \"tmp/browser-tests-index.js\" --startPath app --cors",
     "tslint": "tslint 'src/**/*.ts' 'test/**/*.ts'",
     "tslintFix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts'",
-    "buildDist": "npm run generateTranslationsTs && rm -rf tmp/dist && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist",
+    "buildDist": "rm -rf tmp/dist && mkdir -p app/scripts && npm run generateTranslationsTs && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html &&  npm run buildOfflineDist && npm run buildInlined && npm run fakeSidebarDist && mkdir -p dist && cp -R tmp/dist-offline/ dist && rm dist/dist-offline/index-inlined.html",
     "prepack": "prepack app/scripts/main.js --out app/scripts/main.js",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index-inlined.html && npm run inline && npm run packInlined",
