--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
   "dependencies": {
     "preact": "8.1.0",
     "tslib": "^1.7.1"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
