--- a/Acrolinx.Sidebar.Startpage.Dll.nuspec
+++ b/Acrolinx.Sidebar.Startpage.Dll.nuspec
@@ -17,6 +17,6 @@
   </metadata>
 
   <files>
-    <file src="build\Acrolinx.Startpage.dll" target="lib" />
+    <file src="dist\Acrolinx.Startpage.dll" target="lib" />
   </files>
 </package>
