DEVOPS-402: Remove linebreaks from NuGet package description.

--- a/Acrolinx.Sidebar.Startpage.Dll.nuspec
+++ b/Acrolinx.Sidebar.Startpage.Dll.nuspec
@@ -8,10 +8,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://github.com/acrolinx/sidebar-startpage/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/acrolinx/sidebar-startpage</projectUrl>
-    <description>
-        Container component for Acrolinx integrations that loads the Acrolinx sidebar;
-        packaged as a resource DLL
-    </description>
+    <description>Container component for Acrolinx integrations that loads the Acrolinx sidebar; packaged as a resource DLL</description>
     <copyright>Copyright © Acrolinx 2017</copyright>
     <tags>Acrolinx Sidebar Startpage</tags>
 
