--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "prepack": "0.2.4",
     "sinon": "2.3.6",
     "ts-node": "3.0.2",
-    "tslint": "^4.4.2",
+    "tslint": "5.8.0",
     "typescript": "2.4.2",
     "watch": "1.0.2",
     "watchify": "^3.9.0"
