Fixed npm script "dev"

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "bower": "bower install",
     "generateTranslationsTs": "mkdir -p tmp/generated && node ./tools/generate-translations-ts.js",
-    "dev": "concurrently --kill-others -r 'npm run lessWatch' 'npm run tscWatch' 'npm run watchify' 'npm run browsersync'",
+    "dev": "npm run prepareDev && concurrently --kill-others -r 'npm run lessWatch' 'npm run tscWatch' 'npm run watchify' 'npm run browsersync'",
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "prepareDev": "mkdir -p app/scripts && npm run less",
