--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "prepareDev": "mkdir -p app/scripts && npm run less",
-    "test": "npm run testNodeJS && npm run testKarmaPhantomJS",
+    "test": "npm run testNodeJS && npm run testKarma",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
-    "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js",
+    "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js --browsers PhantomJS",
+    "testKarma": "karma start test/browser-tests/karma.conf.js",
     "clean": "rm -rf tmp && rm -rf app/scripts && rm -rf dist",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
@@ -44,7 +45,7 @@
   "devDependencies": {
     "@types/chai": "3.4.35",
     "@types/jquery": "2.0.47",
-    "@types/mocha": "2.2.39",
+    "@types/mocha": "2.2.44",
     "@types/sinon": "2.3.2",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
@@ -57,6 +58,7 @@
     "jquery": "^3.2.1",
     "karma": "^1.7.0",
     "karma-browserify": "^5.1.1",
+    "karma-browserstack-launcher": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
