Test more BrowserStack configs

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "prepareDev": "mkdir -p app/scripts && npm run less",
-    "test": "npm run testNodeJS && npm run testKarma",
+    "test": "npm run testNodeJS && npm run testKarmaPhantomJS && npm run testKarmaBs",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
     "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js --browsers PhantomJS",
-    "testKarma": "karma start test/browser-tests/karma.conf.js",
+    "testKarmaBs": "karma start test/browser-tests/karma.conf.js --browsers bs_ie11_win,bs_edge_win,bs_chrome_win,bs_firefox_win,bs_firefox_est_win,bs_safari_macos",
+    "testKarmaAll": "karma start test/browser-tests/karma.conf.js",
     "clean": "rm -rf tmp && rm -rf app/scripts && rm -rf dist",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
