--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "npm run testNodeJS && npm run testKarmaPhantomJS && npm run testKarmaBs",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
     "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js --browsers PhantomJS",
+    "testKarmaChrome": "karma start test/browser-tests/karma.conf.js --browsers Chrome",
+    "stryker": "stryker run",
     "testKarmaBs": "karma start test/browser-tests/karma.conf.js --browsers bs_ie11_win,bs_edge_win,bs_chrome_win,bs_firefox_win,bs_firefox_est_win,bs_safari_macos",
     "testKarmaAll": "karma start test/browser-tests/karma.conf.js",
     "clean": "rm -rf tmp && rm -rf app/scripts && rm -rf dist",
@@ -60,6 +62,7 @@
     "karma": "^1.7.0",
     "karma-browserify": "^5.1.1",
     "karma-browserstack-launcher": "^1.3.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
@@ -69,9 +72,16 @@
     "mocha": "^3.2.0",
     "prepack": "0.2.4",
     "sinon": "2.3.6",
+    "stryker": "^0.15.5",
+    "stryker-api": "^0.11.0",
+    "stryker-baseline-reporter": "^1.1.0",
+    "stryker-html-reporter": "^0.11.3",
+    "stryker-javascript-mutator": "^0.2.3",
+    "stryker-karma-runner": "^0.11.2",
+    "stryker-typescript": "^0.8.0",
     "ts-node": "3.0.2",
     "tslint": "5.8.0",
-    "typescript": "2.4.2",
+    "typescript": "2.6.2",
     "watch": "1.0.2",
     "watchify": "^3.9.0"
   },
