--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "tslint": "tslint 'src/**/*.ts' 'test/**/*.ts'",
     "tslintFix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts'",
     "buildDist": "rm -rf tmp/dist && mkdir -p app/scripts && npm run generateTranslationsTs && npm run tslint && tsc && npm run injectVersion && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined && npm run buildNpmDist",
-    "buildNpmDist": "mkdir -p dist && cp -R tmp/dist-offline/ dist && rm dist/dist-offline/index.html && npm run createNpmDistFilesIndex && npm run copyInlinedToNpmDist",
+    "buildNpmDist": "mkdir -p dist && cp -R tmp/dist-offline/ dist && npm run createNpmDistFilesIndex && npm run copyInlinedToNpmDist",
     "copyInlinedToNpmDist": "cp tmp/acrolinx-sidebar-startpage-inlined.js dist/index.js && cp tools/dist/index.d.ts dist/",
     "createNpmDistFilesIndex": "cd dist/dist-offline && find . -type f | sed 's/^\\.//' |grep -v '^/files.txt' >files.txt",
     "prepack": "prepack app/scripts/main.js --out app/scripts/main.js",
