--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "buildNpmDist": "mkdir -p dist && cp -R tmp/dist-offline/ dist && npm run createNpmDistFilesIndex && npm run copyInlinedToNpmDist",
     "copyInlinedToNpmDist": "cp tmp/acrolinx-sidebar-startpage-inlined.js dist/index.js && cp tools/dist/index.d.ts dist/",
     "createNpmDistFilesIndex": "cd dist/dist-offline && find . -type f | sed 's/^\\.//' |grep -v '^/files.txt' >files.txt",
-    "prepack": "prepack app/scripts/main.js --out app/scripts/main.js",
     "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
     "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index.html && npm run inline && npm run packInlined",
     "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index.html |inliner >../dist-inlined.html",
@@ -57,7 +56,7 @@
     "chai": "^3.5.0",
     "concurrently": "3.4.0",
     "cookie": "^0.3.1",
-    "hashcat": "^0.3.1",
+    "hashcat": "0.3.1",
     "inliner": "1.10.2",
     "jquery": "^3.2.1",
     "karma": "^1.7.0",
@@ -71,7 +70,6 @@
     "less": "2.7.2",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
-    "prepack": "0.2.4",
     "preact": "8.2.1",
     "sinon": "2.3.6",
     "tslib": "^1.7.1",
