--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/dev --recursive --acl public-read",
     "deployProd": "aws s3 cp tmp/dist s3://acrolinx-sidebar-classic/v14/prod --recursive --acl public-read",
     "prepareDev": "mkdir -p app/scripts && npm run less",
-    "test": "npm run testNodeJS && npm run testKarmaPhantomJS && npm run testKarmaBs",
+    "test": "npm run testNodeJS && npm run testKarmaPhantomJS",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
     "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js --browsers PhantomJS",
     "testKarmaChrome": "karma start test/browser-tests/karma.conf.js --browsers Chrome",
@@ -45,21 +45,25 @@
   "files": [
     "dist"
   ],
+  "// devDependencies comments": {
+    "sinon": "Newer versions (6.1.3) caused problems in test build for IE11",
+    "preact": "This is the only package that is build into the final startpage code."
+  },
   "devDependencies": {
-    "@types/chai": "3.4.35",
-    "@types/jquery": "2.0.47",
-    "@types/mocha": "2.2.44",
-    "@types/sinon": "2.3.2",
+    "@types/chai": "4.1.4",
+    "@types/jquery": "3.3.5",
+    "@types/mocha": "5.2.5",
+    "@types/sinon": "5.0.1",
     "browser-sync": "^2.18.8",
-    "browserify": "^14.1.0",
-    "browserify-istanbul": "^2.0.0",
-    "chai": "^3.5.0",
-    "concurrently": "3.4.0",
+    "browserify": "^16.2.2",
+    "browserify-istanbul": "^3.0.1",
+    "chai": "^4.1.2",
+    "concurrently": "3.6.1",
     "cookie": "^0.3.1",
     "hashcat": "0.3.1",
-    "inliner": "1.10.2",
-    "jquery": "^3.2.1",
-    "karma": "^1.7.0",
+    "inliner": "1.13.1",
+    "jquery": "^3.3.1",
+    "karma": "^2.0.5",
     "karma-browserify": "^5.1.1",
     "karma-browserstack-launcher": "^1.3.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -67,12 +71,12 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "less": "2.7.2",
+    "less": "3.8.0",
     "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
-    "preact": "8.2.1",
-    "sinon": "2.3.6",
-    "tslint": "5.8.0",
+    "mocha": "^5.2.0",
+    "preact": "8.2.9",
+    "sinon": "5.0.1",
+    "tslint": "5.11.0",
     "typescript": "2.9.2",
     "watch": "1.0.2",
     "watchify": "^3.9.0"
