--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
   <distributionManagement>
     <repository>
       <id>dune</id>
-      <url>http://artifactory.dune.acrolinx.local/artifactory/libs-release-local</url>
+      <url>https://artifactory.dev.acrolinx.com/artifactory/libs-release-local</url>
     </repository>
     <snapshotRepository>
       <id>dune-snapshots</id>
-      <url>http://artifactory.dune.acrolinx.local/artifactory/libs-snapshot-local</url>
+      <url>https://artifactory.dev.acrolinx.com/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
   </distributionManagement>
 </project>
