--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acrolinx-sidebar-startpage",
+  "name": "@acrolinx/sidebar-startpage-dummy",
   "version": "2.0.7",
   "description": "A Container Component for Acrolinx Integrations that loads the Acrolinx sidebar",
   "scripts": {
