--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "3.0.2",
   "description": "A Container Component for Acrolinx Integrations that loads the Acrolinx sidebar",
   "scripts": {
-    "generateTranslationsTs": "mkdir -p tmp/generated && node ./tools/generate-translations-ts.js",
+    "generateTranslationsTs": "shx mkdir -p tmp/generated && node ./tools/generate-translations-ts.js",
     "dev": "npm run prepareDev && concurrently --kill-others -r 'npm run lessWatch' 'npm run tscWatch' 'npm run watchify' 'npm run browsersync'",
-    "prepareDev": "mkdir -p app/scripts && npm run less",
+    "prepareDev": "shx mkdir -p app/scripts && npm run less",
     "test": "npm run testNodeJS && npm run testKarmaPhantomJS",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
     "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js --browsers PhantomJS",
     "testKarmaChrome": "karma start test/browser-tests/karma.conf.js --browsers Chrome",
     "testKarmaBs": "karma start test/browser-tests/karma.conf.js --browsers bs_ie11_win,bs_edge_win,bs_chrome_win,bs_firefox_win,bs_firefox_est_win,bs_safari_macos",
     "testKarmaAll": "karma start test/browser-tests/karma.conf.js",
-    "clean": "rm -rf tmp && rm -rf app/scripts && rm -rf dist",
+    "clean": "shx rm -rf tmp && shx rm -rf app/scripts && rm -rf dist",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
     "less": "lessc src/styles/index.less >app/styles/index.css",
@@ -24,13 +24,13 @@
     "browsersync": "browser-sync start --server --files \"app/**/*\" --files \"tmp/browser-tests-index.js\" --startPath app --cors",
     "tslint": "tslint 'src/**/*.ts' 'test/**/*.ts'",
     "tslintFix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts'",
-    "buildDist": "rm -rf tmp/dist && mkdir -p app/scripts && npm run generateTranslationsTs && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && mkdir -p tmp && cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined && npm run buildNpmDist",
-    "buildNpmDist": "mkdir -p dist && cp -R tmp/dist-offline/ dist && npm run createNpmDistFilesIndex && npm run copyInlinedToNpmDist",
-    "copyInlinedToNpmDist": "cp tmp/sidebar-startpage-inlined.js dist/index.js && cp tools/dist/index.d.ts dist/",
-    "createNpmDistFilesIndex": "cd dist/dist-offline && find . -type f | sed 's/^\\.//' |grep -v '^/files.txt' >files.txt",
-    "buildOfflineDist": "rm -rf tmp/dist-offline && cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
-    "buildInlined": "rm -rf tmp/dist-inlined && cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index.html && npm run inline && npm run packInlined",
-    "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && cat index.html |inliner >../dist-inlined.html",
+    "buildDist": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run tslint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined && npm run buildNpmDist",
+    "buildNpmDist": "shx mkdir -p dist && shx cp -R tmp/dist-offline/ dist && npm run createNpmDistFilesIndex && npm run copyInlinedToNpmDist",
+    "copyInlinedToNpmDist": "shx cp tmp/sidebar-startpage-inlined.js dist/index.js && shx cp tools/dist/index.d.ts dist/",
+    "createNpmDistFilesIndex": "cd dist/dist-offline && shx find . | sed 's/^\\.//' |grep -v '^/files.txt' >files.txt",
+    "buildOfflineDist": "shx rm -rf tmp/dist-offline && shx cp -r app tmp/dist-offline && npm run inlineSvg ./tmp/dist-offline/styles",
+    "buildInlined": "shx rm -rf tmp/dist-inlined && shx cp -r app tmp/dist-inlined && hashcat tmp/dist-inlined/index.html && npm run inline && npm run packInlined",
+    "inline": "npm run inlineSvg ./tmp/dist-inlined/styles && cd tmp/dist-inlined && shx cat index.html |inliner >../dist-inlined.html",
     "inlineSvg": "node ./tools/inline-svg.js",
     "packInlined": "node ./tools/pack-inlined.js >tmp/sidebar-startpage-inlined.js",
     "injectVersion": "node ./tools/inject-version.js"
@@ -73,6 +73,7 @@
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "preact": "8.3.1",
+    "shx": "^0.3.2",
     "sinon": "5.1.1",
     "tslint": "5.11.0",
     "typescript": "3.3.4000",
