--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "testKarmaChrome": "karma start test/browser-tests/karma.conf.js --browsers Chrome",
     "testKarmaBs": "karma start test/browser-tests/karma.conf.js --browsers bs_ie11_win,bs_edge_win,bs_chrome_win,bs_firefox_win,bs_firefox_est_win,bs_safari_macos",
     "testKarmaAll": "karma start test/browser-tests/karma.conf.js",
-    "clean": "shx rm -rf tmp && shx rm -rf app/scripts && rm -rf dist",
+    "clean": "shx rm -rf tmp && shx rm -rf app/scripts && shx rm -rf dist",
     "tsc": "npm run generateTranslationsTs && tsc",
     "tscWatch": "npm run generateTranslationsTs && tsc -w",
     "less": "lessc src/styles/index.less >app/styles/index.css",
