DEV-21627 Create sidebar-interface project and reference it in sidebar-sdks
* Use "@acrolinx/sidebar-interface": "^14.16.1"

--- a/package.json
+++ b/package.json
@@ -83,5 +83,8 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "@acrolinx/sidebar-interface": "^14.16.1"
   }
 }
