--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "preact": "10.5.5",
     "shx": "^0.3.2",
     "sinon": "9.2.0",
+    "tslib": "^2.0.3",
     "tslint": "6.1.3",
     "typescript": "4.0.3",
     "watch": "1.0.2",
