--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "sourceMap": true,
     "module": "commonjs",
     "lib": ["ES5","DOM", "ES2015.Collection"] /* ES2015.Collection is just needed to make sinon happy */,
-    "importHelpers": true
+    "importHelpers": true,
+    "skipLibCheck": true,
   },
   "exclude": [
     "node_modules",
