--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
   },
   "devDependencies": {
     "@types/chai": "4.2.14",
-    "@types/jquery": "3.5.4",
-    "@types/lodash": "^4.14.165",
-    "@types/mocha": "8.0.4",
-    "@types/sinon": "9.0.8",
+    "@types/jquery": "^3.5.5",
+    "@types/lodash": "^4.14.167",
+    "@types/mocha": "^8.2.0",
+    "@types/sinon": "^9.0.10",
     "browser-sync": "^2.26.13",
     "browserify": "^17.0.0",
     "browserify-istanbul": "^3.0.1",
@@ -72,15 +72,15 @@
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.4",
-    "less": "3.12.2",
+    "less": "^4.1.0",
     "lodash": "^4.17.20",
     "mocha": "^8.2.1",
-    "preact": "10.5.7",
+    "preact": "^10.5.10",
     "shx": "^0.3.3",
-    "sinon": "9.2.1",
-    "tslib": "^2.0.3",
+    "sinon": "9.2.3",
+    "tslib": "^2.1.0",
     "tslint": "6.1.3",
-    "typescript": "4.0.5",
+    "typescript": "4.1.3",
     "watch": "1.0.2",
     "watchify": "^3.11.1"
   },
