Updated karma and replaced phantomjs with chromeheadless

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "generateTranslationsTs": "shx mkdir -p tmp/generated && node ./tools/generate-translations-ts.js",
     "dev": "npm run prepareDev && concurrently --kill-others -r 'npm run lessWatch' 'npm run tscWatch' 'npm run watchify' 'npm run browsersync'",
     "prepareDev": "shx mkdir -p app/scripts && npm run less",
-    "test": "npm run testNodeJS && npm run testKarmaPhantomJS",
+    "test": "npm run testNodeJS && npm run testKarmaChromeHeadless",
     "testNodeJS": "mocha tmp/compiled/test/node-js-unit-tests/**/*.js",
-    "testKarmaPhantomJS": "karma start test/browser-tests/karma.conf.js --browsers PhantomJS",
     "testKarmaChrome": "karma start test/browser-tests/karma.conf.js --browsers Chrome",
+    "testKarmaChromeHeadless": "karma start test/browser-tests/karma.conf.js --browsers ChromeHeadless",
     "testKarmaBs": "karma start test/browser-tests/karma.conf.js --browsers bs_ie11_win,bs_edge_win,bs_chrome_win,bs_firefox_win,bs_firefox_est_win,bs_safari_macos",
     "testKarmaAll": "karma start test/browser-tests/karma.conf.js",
     "clean": "shx rm -rf tmp && shx rm -rf app/scripts && shx rm -rf dist",
@@ -64,14 +64,13 @@
     "hashcat": "^0.4.1",
     "inliner": "1.13.1",
     "jquery": "^3.5.1",
-    "karma": "^5.2.3",
-    "karma-browserify": "^7.0.0",
+    "karma": "^6.0.0",
+    "karma-browserify": "^8.0.0",
     "karma-browserstack-launcher": "^1.6.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
-    "karma-phantomjs-launcher": "^1.0.4",
     "less": "^4.1.0",
     "lodash": "^4.17.20",
     "mocha": "^8.2.1",
