DEV-27141 Specify company in Registry URL

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,8 @@ npm-deploy:
     - echo "@acrolinx:registry=https://registry.npmjs.org/" > .npmrc
     - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> .npmrc
     - npm set registry https://registry.npmjs.org/
+    - npm ci
+    - npm run buildDistWithNPMLinuxOnly
     - npm publish --access public
   only:
     - tags
