DEV-27141 Specify company in Registry URL

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,8 +72,10 @@ npm-deploy:
   variables:
     NPM_TOKEN: ${NPM_TOKEN}
   script:
+    - npm config set registry=https://registry.npmjs.org/
     - npm config set @acrolinx:registry=https://registry.npmjs.org/
     - npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+    - npm ci
     - npm publish --verbose --access public
   only:
     - tags
